--- a/app/src/main/res/layout/activity_adding_battery_page.xml
+++ b/app/src/main/res/layout/activity_adding_battery_page.xml
@@ -62,8 +62,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
+        android:hint="TDES Name"
         android:inputType="text"
-        android:text="TDES Name"
         app:layout_constraintBottom_toTopOf="@+id/TDESid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -76,8 +76,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="400dp"
         android:ems="10"
+        android:hint="TDES Name"
         android:inputType="text"
-        android:text="TDES id"
         app:layout_constraintBottom_toTopOf="@+id/bottomAppBar3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
