created toggle handling for heating button on the landing page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="48dp"
         android:backgroundTint="#FDFDFD"
         android:fontFamily="sans-serif-black"
-        android:text="ESA Stakeholders"
+        android:text="Thermal Energy Storage"
         android:textAlignment="center"
         android:textColor="#76A8D6"
         android:textSize="34sp"
