--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -98,22 +98,20 @@
         android:id="@+id/ambientTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="260dp"
+        android:layout_marginStart="55dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toTopOf="@+id/internalTemp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/internalTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="260dp"
+        android:layout_marginStart="55dp"
         android:layout_marginBottom="170dp"
         android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toTopOf="@+id/toggleCharging"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
