--- a/app/src/main/res/layout/activity_adding_battery_page.xml
+++ b/app/src/main/res/layout/activity_adding_battery_page.xml
@@ -76,7 +76,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="400dp"
         android:ems="10"
-        android:hint="TDES Name"
+        android:hint="TDES ID"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/bottomAppBar3"
         app:layout_constraintEnd_toEndOf="parent"
