some more work on the landing page to make it a bit more pretty

--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -8,13 +8,22 @@
     android:background="#A9C0BD"
     tools:context=".landingPage">
 
+    <ImageView
+        android:id="@+id/dunes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="251dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/notusedsanddunes"
+        tools:layout_editor_absoluteX="0dp" />
+
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="0dp"
-        android:layout_height="99dp"
+        android:layout_height="70dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="4dp"
-        app:backgroundTint="#415972"
+        android:layout_marginBottom="22dp"
+        app:backgroundTint="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -25,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Add Battery"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,9 +44,10 @@
         android:id="@+id/button10"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button9"
@@ -48,22 +58,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button9" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="243dp"
-        android:layout_height="369dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/batterylogo" />
 
     <Button
         android:id="@+id/toggleHeating"
@@ -71,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="25dp"
+        android: android:backgroundTint="#90A959"
         android:text="Toggle Heating"
         app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -124,5 +126,15 @@
         android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toTopOf="@+id/ambientTemp"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="117dp"
+        android:layout_height="196dp"
+        android:layout_marginTop="175dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/usablelogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
