--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -5,26 +5,124 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A9C0BD"
+
     tools:context=".profilePage">
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="155dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/notusedsanddunes"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <NumberPicker
+        android:id="@+id/heatingStartMinute"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="216dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <NumberPicker
+        android:id="@+id/heatingStartHour"
+        android:layout_width="60dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="216dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <NumberPicker
+        android:id="@+id/heatingEndMinute"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="216dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="216dp"
+        android:text="Heating Start Time"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/userEmailTextView" />
+
+    <NumberPicker
+        android:id="@+id/heatingEndHour"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="216dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <NumberPicker
+        android:id="@+id/chargeMinuteStart"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <NumberPicker
+        android:id="@+id/chargeHourEnd"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="24dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <NumberPicker
+        android:id="@+id/chargeEndMinute"
+        android:layout_width="57dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="192dp"
+        android:layout_marginTop="24dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toEndOf="@+id/chargeHourStart"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/logOut"
         android:layout_width="115dp"
         android:layout_height="49dp"
         android:layout_marginBottom="114dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Logout"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar2"
-        android:layout_width="0dp"
-        android:layout_height="99dp"
+        android:layout_width="411dp"
+        android:layout_height="98dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="4dp"
-        app:backgroundTint="#415972"
+        app:backgroundTint="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -34,9 +132,10 @@
         android:id="@+id/addBattery2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:layout_marginBottom="28dp"
+        android:backgroundTint="#E9B872"
         android:text="Add Battery"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -46,9 +145,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="28dp"
+        android:backgroundTint="#E9B872"
         android:text="Profile"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button9" />
@@ -57,10 +158,12 @@
         android:id="@+id/homeButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:layout_marginBottom="28dp"
+        android:backgroundTint="#E9B872"
         android:text="Home"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button9"
         app:layout_constraintStart_toStartOf="parent" />
@@ -85,5 +188,36 @@
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Schedule Charge Time"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/userEmailTextView" />
+
+    <NumberPicker
+        android:id="@+id/chargeHourStart"
+        android:layout_width="60dp"
+        android:layout_height="99dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:solidColor="#A9C0BD"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/saveSchedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#E9B872"
+        android:text="Save Schedule"
+        android:textColor="#151515"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heatingStartMinute" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
