--- a/app/src/main/res/layout/activity_adding_battery_page.xml
+++ b/app/src/main/res/layout/activity_adding_battery_page.xml
@@ -5,15 +5,24 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A9C0BD"
     tools:context=".addingBatteryPAge">
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="155dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/notusedsanddunes"
+        tools:layout_editor_absoluteX="0dp" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar3"
-        android:layout_width="0dp"
-        android:layout_height="99dp"
+        android:layout_width="411dp"
+        android:layout_height="98dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="4dp"
-        app:backgroundTint="#415972"
+        app:backgroundTint="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,8 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Add Battery"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,9 +45,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Profile"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button9" />
@@ -46,10 +58,12 @@
         android:id="@+id/button5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Home"
+        android:textColor="#151515"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button9"
         app:layout_constraintStart_toStartOf="parent" />
