--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A9C0BD"
     tools:context=".ui.RegisterActivity">
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="251dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/notusedsanddunes"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/registerEmailText"
@@ -15,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:ems="10"
-        android:hint="Employee Email"
+        android:hint="User Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,14 +51,14 @@
         android:layout_width="314dp"
         android:layout_height="56dp"
         android:layout_marginTop="128dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#151515"
         android:ems="10"
         android:fontFamily="sans-serif-black"
         android:inputType="text"
-        android:text="ESA Employee Registration"
+        android:text="Account Registration"
         android:textAlignment="center"
-        android:textColor="#76A8D6"
-        android:textColorLink="#76A8D6"
+        android:textColor="#151515"
+        android:textColorLink="#151515"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -62,7 +72,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#a63d40"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,9 +84,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="#76A8D6"
+        android:backgroundTint="#E9B872"
         android:text="Back"
+        android:textColor="#151515"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
